--- a/home.html
+++ b/home.html
@@ -29,14 +29,14 @@
         <section id="home"  class="apresen">
             <div>
                 <h1 class="principal"> Olá! Sou Gilvanilton</h1>
-                <h2 class="subtitulo">Sou estudante de Webdesigner</h2>
+                <h2 class="subtitulo">Sou estudante de Webdesigner, UI Design e Design Gráfico.</h2>
                 <a href="contact.html"><button class="botao" id="contact">Me adicione!</button></a>
             </div>
             <img src="imgs/Me AC.jpg" alt="Gilvanilton" class="perfil">
         </section>
         <section class="secundario">
-            <h3 class="secundario-titulo">Estou muito animado para me candidatar à posição de desenvolvedor junior.</h3>
-            <p class="secundario-paragrafo">Recentemente estudo de forma autodidata e estou ansioso para começar minha carreira no mundo da programação.</p>
+            <h3 class="secundario-titulo">Estou muito animado para me candidatar à posição.</h3>
+            <p class="secundario-paragrafo">Recentemente estudo de forma autodidata e curso Graduação EAD de Design Gráfico na <a href="https://www.cruzeirodosul.edu.br/" target="_blank">Cruzeiro do Sul</a> e estou ansioso para começar minha carreira no mundo da programação e design.</p>
             
         </section>
     </main>
