--- a/home.html
+++ b/home.html
@@ -18,10 +18,10 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">About me</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About me</a></li>
             </ul>
         </nav>
     </header>
@@ -36,33 +36,14 @@
         </section>
         <section class="secundario">
             <h3 class="secundario-titulo">Estou muito animado para me candidatar à posição.</h3>
-            <p class="secundario-paragrafo">Recentemente estudo de forma autodidata e curso Graduação EAD de Design Gráfico na <a href="https://www.cruzeirodosul.edu.br/" target="_blank">Cruzeiro do Sul</a> e estou ansioso para começar minha carreira no mundo da programação e design.</p>
+            <p class="secundario-paragrafo">Recentemente estudo de forma autodidata e curso Graduação EAD de Design Gráfico na <a href="https://www.cruzeirodosul.edu.br/" target="_blank">Cruzeiro do Sul</a> <br> <p class="secundario-paragrafo">e estou ansioso para começar minha carreira no mundo da programação e design.</p></p>
             
         </section>
     </main>
 
-    <main>
-        <section id="work">
-
-        </section>
-
-    </main>
-    <main>
-        <section id="about">
-
-        </section>
-
-    </main>
-    <main>
-        <section id="contact">
-
-        </section>
-
-    </main>
 
     <script src="mobilenavbar.js">
     </script>
-    <script src="app.js"></script>
 
     <footer>
         <p>Desenvolvido por Gilvanilton Ribeiro &copy;</p>
