--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icons8-vaporwave-gradient/icons8-vaporwave-96.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Curriculo Gilvanilton Ribeiro</title>
+    <title>Menu Responsivo</title>
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
                 <h2 class="subtitulo">Sou estudante de Webdesigner, UI Design e Design Gráfico.</h2>
                 <a href="contact.html"><button class="botao" id="contact">Me adicione!</button></a>
             </div>
-            <img src="imgs/Me AC.jpg" alt="Gilvanilton" class="perfil">
+            <img src="" alt="" class="perfil">
         </section>
         <section class="secundario">
             <h3 class="secundario-titulo">Estou muito animado para me candidatar à posição.</h3>
